--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
+    "react-native-background-timer": "^2.4.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-gifted-charts": "^1.4.61",
     "react-native-heroicons": "^4.0.0",
@@ -53,7 +54,9 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "tailwindcss": "3.4.17"
+    "tailwindcss": "3.4.17",
+    "expo-background-fetch": "~13.0.6",
+    "expo-task-manager": "~12.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
